[package]
name = "metacpan_api"
version = "0.1.0"
authors = ["Rasmus Thomsen <rasmus.thomsen@protonmail.com>"]
description = "Query the metacpan.org API"
homepage = "https://github.com/Cogitri/metacpan_api"
repository = "https://github.com/Cogitri/metacpan_api"
readme = "README.md"
license = "GPL-3.0-or-later"

[dependencies]
reqwest = "0.9"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
url = "1.7.1"
failure = "^0.1.3"
log = "^0.4.6"

[dev-dependencies]
cargo-husky = {version = "^1.2.0", features = ["precommit-hook", "run-cargo-test"]}